ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: testapp-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /testapp
        backend:
          serviceName: testapp-service
          servicePort: 3000
